<resources>
    <string name="app_name">USTH Weather</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="_12_c_cloudy">12°C Cloudy</string>
    <string name="paris" translatable="false">Paris</string>
    <string name="mon">Mon</string>
    <string name="partly_cloudy_n24c_31c">Partly Cloudy\n24C - 31C</string>
    <string name="tue">Tue</string>
    <string name="showers_n24c_30c">Showers\n24C - 30C</string>
    <string name="wed">Wed</string>
    <string name="rain_n22c_23c">Rain\n22C - 23C</string>
    <string name="thu">Thu</string>
    <string name="scattered_showers_n22c_27c">Scattered Showers\n22C - 27C</string>
    <string name="fri">Fri</string>
    <string name="mostly_cloudy_n22c_30c">Mostly Cloudy\n22C - 30C</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="thunderstorms_n25c_28c">Thunderstorms\n25C - 28C</string>
    <string name="scattered_thunderstorms_n24c_27c">Scattered Thunderstorms\n24C - 27C</string>
    <string name="showers_n24c_26c">Showers\n24C - 26C</string>
    <string name="showers_n23c_25c">Showers\n23C - 25C</string>
    <string name="settings" translatable="false">Settings</string>
    <string name="refresh" translatable="false">Refresh</string>
    <string name="welcome_to_PrefActivity" translatable="false">Welcome to PrefActivity</string>
    <string name="logo_description" translatable="false">Logo Description\n</string>
</resources>