<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForecastFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/padding_large">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding_item">

            <!-- Monday -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/padding_default">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="@dimen/padding_default"
                    android:text="@string/mon"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_small" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="53dp"
                    android:layout_weight="2"
                    android:padding="@dimen/padding_default"
                    android:src="@drawable/cloudy1" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="left"
                    android:padding="@dimen/padding_default"
                    android:text="@string/partly_cloudy_n24c_31c"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_small" />
            </LinearLayout>

            <!-- Tuesday -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/padding_default">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="@dimen/padding_default"
                    android:text="@string/tue"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_small" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="53dp"
                    android:layout_weight="2"
                    android:padding="@dimen/padding_default"
                    android:src="@drawable/showers" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="left"
                    android:padding="@dimen/padding_default"
                    android:text="@string/showers_n24c_30c"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_small" />
            </LinearLayout>

            <!-- Wednesday -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/padding_default">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="@dimen/padding_default"
                    android:text="@string/wed"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_small" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="53dp"
                    android:layout_weight="2"
                    android:padding="@dimen/padding_default"
                    android:src="@drawable/showers" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="left"
                    android:padding="@dimen/padding_default"
                    android:text="@string/rain_n22c_23c"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_small" />
            </LinearLayout>

            <!-- Thursday -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/padding_default">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="@dimen/padding_default"
                    android:text="@string/thu"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_small" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="53dp"
                    android:layout_weight="2"
                    android:padding="@dimen/padding_default"
                    android:src="@drawable/scattered_showers" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="left"
                    android:padding="@dimen/padding_default"
                    android:text="@string/scattered_showers_n22c_27c"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_small" />
            </LinearLayout>

            <!-- Friday -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/padding_default">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="@dimen/padding_default"
                    android:text="@string/fri"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_small" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="53dp"
                    android:layout_weight="2"
                    android:padding="@dimen/padding_default"
                    android:src="@drawable/mostly_cloudy" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="left"
                    android:padding="@dimen/padding_default"
                    android:text="@string/mostly_cloudy_n22c_30c"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_small" />
            </LinearLayout>

            <!-- Saturday -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/padding_default">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="@dimen/padding_default"
                    android:text="@string/sat"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_small" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="53dp"
                    android:layout_weight="2"
                    android:padding="@dimen/padding_default"
                    android:src="@drawable/mostly_cloudy" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="left"
                    android:padding="@dimen/padding_default"
                    android:text="@string/partly_cloudy_n24c_31c"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_small" />
            </LinearLayout>

            <!-- Sunday -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/padding_default">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="@dimen/padding_default"
                    android:text="@string/sun"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_small" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="53dp"
                    android:layout_weight="2"
                    android:padding="@dimen/padding_default"
                    android:src="@drawable/thunderstorms" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="left"
                    android:padding="@dimen/padding_default"
                    android:text="@string/thunderstorms_n25c_28c"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_small" />
            </LinearLayout>

            <!-- Monday (Next Week) -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/padding_default">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="@dimen/padding_default"
                    android:text="@string/mon"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_small" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="53dp"
                    android:layout_weight="2"
                    android:padding="@dimen/padding_default"
                    android:src="@drawable/scattered_thunderstorms" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="left"
                    android:padding="@dimen/padding_default"
                    android:text="@string/scattered_thunderstorms_n24c_27c"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_small" />
            </LinearLayout>

            <!-- Tuesday (Next Week) -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/padding_default">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="@dimen/padding_default"
                    android:text="@string/tue"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_small" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="53dp"
                    android:layout_weight="2"
                    android:padding="@dimen/padding_default"
                    android:src="@drawable/showers" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="left"
                    android:padding="@dimen/padding_default"
                    android:text="@string/showers_n24c_26c"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_small" />
            </LinearLayout>

            <!-- Wednesday (Next Week) -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="0dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="@dimen/padding_default"
                    android:text="@string/wed"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_small" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="53dp"
                    android:layout_weight="2"
                    android:padding="@dimen/padding_default"
                    android:src="@drawable/showers" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="left"
                    android:padding="@dimen/padding_default"
                    android:text="@string/showers_n23c_25c"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_small" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>
